fixed Java 9+ incompatibility problem at "load/save custom board"
javax.xml.bind.DatatypeConverter is no longer available, so we now use java.util.Base64 (new in Java 8) to encode/decode game board data to/from text.