@@ -20,6 +20,7 @@ package driftingdroids.model;
 import java.io.UnsupportedEncodingException;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Base64;
 import java.util.Collections;
 import java.util.Formatter;
 import java.util.Iterator;
@@ -29,8 +30,6 @@ import java.util.ResourceBundle;
 import java.util.zip.CRC32;
 import java.util.zip.Deflater;
 import java.util.zip.Inflater;
-
-import javax.xml.bind.DatatypeConverter;
 
 
 
@@ -643,7 +642,7 @@ public class Board {
         final int zipOutLen = 4 + zip.deflate(zipOutput, 4, zipOutput.length-4);    //skip uncompressed length
         //encode base64
         final byte[] b64Input = Arrays.copyOf(zipOutput, zipOutLen);
-        final String b64Output = DatatypeConverter.printBase64Binary(b64Input);
+        final String b64Output = Base64.getEncoder().encodeToString(b64Input);
         //compute CRC of encoded data
         final CRC32 crc32 = new CRC32();
         try {
@@ -674,7 +673,7 @@ public class Board {
                 throw new IllegalArgumentException("data CRC mismatch");
             }
             //parse base64 string
-            final byte[] b64Output = DatatypeConverter.parseBase64Binary(inputSplit[3]);    //throws IllegalArgumentException
+            final byte[] b64Output = Base64.getDecoder().decode(inputSplit[3]);    //throws IllegalArgumentException
             //unzip/inflate data
             int unzipLen = 0;
             for (int i = 0;  i < 4;  ++i) {
